--- a/.cargo/config
+++ b/.cargo/config
@@ -1,14 +1,12 @@
 [target.thumbv7m-none-eabi]
-runner = 'arm-none-eabi-gdb'
-rustflags = [
-  "-C", "link-arg=-Wl,-Tlink.x",
-  "-C", "link-arg=-nostartfiles",
 
-  # uncomment to use rustc LLD to link programs (a)
-  # "-C", "link-arg=-Tlink.x",
-  # "-C", "linker=lld",
-  # "-Z", "linker-flavor=ld.lld",
-]
+# uncomment ONE of these three option to make `cargo run` start a GDB session
+# which option to pick depends on your system
+runner = "arm-none-eabi-gdb -q -x openocd.gdb"
+# runner = "gdb-multiarch -q -x openocd.gdb"
+# runner = "gdb -q -x openocd.gdb"
+
+rustflags = ["-C", "link-arg=-Tlink.x"]
 
 [build]
 target = "thumbv7m-none-eabi"
