--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
 
 [dependencies]
-stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal", branch = "master" }
-cortex-m-rt = "0.5"
-cast = { version = "*", default-features = false }
+stm32f103xx-hal = { git = "https://github.com/burrbull/stm32f103xx-hal", branch = "ed2018" }
+cortex-m-rt = "0.6"
+cast = { version = "0.2", default-features = false }
 
 [dev-dependencies]
 cortex-m = "0.5"
-panic-semihosting = "0.3"
+panic-semihosting = "0.5"
